[tool.poetry]
name = "lavos"
version = "0.1.0"
description = "Lavos: A Pythonic Cron Expression Serializer with Fluent Syntax."
authors = ["Rafael Izidoro <izidoro.me@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"